cluster/hub/configuration/nvidia/clusterpolicy/gpu-cluster-policy-2.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  creationTimestamp: "2026-09-08T03:27:24Z"
  generation: 6
  name: gpu-cluster-policy
  resourceVersion: "915125066"
  uid: 83aa7651-8dbe-4d77-befc-f0770d408f65
spec:
  daemonsets:
    updateStrategy: RollingUpdate
  dcgm:
    enabled: true
  dcgmExporter: {}
  devicePlugin: {}
  driver:
    enabled: false
    kernelModuleType: auto
  gfd: {}
  mig:
    strategy: single
  migManager:
    enabled: true
  nodeStatusExporter:
    enabled: true
  operator:
    defaultRuntime: crio
    initContainer: {}
    runtimeClass: nvidia
    use_ocp_driver_toolkit: true
  sandboxDevicePlugin:
    enabled: true
  sandboxWorkloads:
    defaultWorkload: vm-passthrough
    enabled: true
    mode: kubevirt
  toolkit:
    enabled: true
    installDir: /usr/local/nvidia
  validator:
    plugin:
      env:
      - name: WITH_WORKLOAD
        value: "true"
  vfioManager:
    enabled: true
  vgpuDeviceManager:
    enabled: true
status:
  conditions:
  - lastTransitionTime: "2026-09-09T04:13:25Z"
    message: ClusterPolicy is ready as all resources have been successfully reconciled
    reason: Reconciled
    status: "True"
    type: Ready
  - lastTransitionTime: "2026-09-09T04:13:25Z"
    message: ""
    reason: Ready
    status: "False"
    type: Error
  namespace: nvidia-gpu-operator
  state: ready
